--- a/index.html
+++ b/index.html
@@ -16,4 +16,28 @@
         }
         a {
             display: block;
-            margin
+            margin: 20px 0;
+            color: blue;
+            text-decoration: none;
+            font-size: 1.2em;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to Lushaba Secondary School</h1>
+        <p>Explore our pages:</p>
+        <a href="home.html">Home Page</a>
+        <a href="login.html">Login Page</a>
+        <a href="create_account.html">Create Account</a>
+        <a href="forgot_password.html">Forgot Password</a>
+        <a href="student-dashboard.html">Student Dashboard</a>
+        <a href="dashboard.html">Staff Dashboard</a>
+        <a href="admissions.html">Admissions</a>
+        <a href="events.html">Events</a>
+    </div>
+</body>
+</html>
